--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#F44336</color>
+    <color name="tintRed">#e06d6d</color>
 
     <color name="darkWhite">#ffeeeeee</color>
     <color name="transparent">#00ffffff</color>
