--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -23,7 +23,6 @@
             android:layout_height="70dp"
             android:src="@drawable/ic_video"
             android:layout_gravity="center"
-            android:visibility="gone"
             android:id="@+id/iv_play"/>
 
 
@@ -70,11 +69,11 @@
         android:id="@+id/lv_recipe" />
 
 
-    <ProgressBar
+    <!--<ProgressBar
         android:id="@+id/pb_loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_gravity="center" />-->
 
 
     <!--<TextView
