--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -45,7 +45,7 @@
             android:textColor="@color/black"
             android:textSize="@dimen/textSize1"
             android:textStyle="bold"
-            android:visibility="gone" />
+            android:visibility="visible" />
         <TextView
             android:id="@+id/tv_comment"
             android:layout_width="wrap_content"
@@ -57,7 +57,7 @@
             android:textColor="#0074CC"
             android:textColorLink="#0074CC"
             android:layout_alignBaseline="@+id/tv_ing"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
     </RelativeLayout>
 
 
